[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Noémie Lehuby <noemie.lehuby@zaclys.net>"]
license = "CC-BY-SA"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pelican = {extras = ["markdown"], version = "^4.8.0"}
Markdown = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
